--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
   "dependencies": {
     "body-parser": "~1.18.3",
     "cookie-parser": "~1.4.3",
+    "cryptiles": ">=4.1.2",
     "debug": "~4.1.0",
     "express": "~4.16.4",
+    "hoek": ">=4.2.1",
     "jade": "~1.11.0",
     "morgan": "~1.9.1",
     "serve-favicon": "~2.5.0",
+    "sshpk": ">=1.13.2",
     "request": "*",
     "suncalc": "*"
   }
